--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,9 +1,11 @@
 .footer {
-  margin: 67px 0 60px;
+  margin: 67px 0 0;
+  padding-bottom: 60px;
 }
 
 @media screen and (max-width: 1023px) {
   .footer {
-    margin: 50px 19px 36px;
+    margin: 50px 19px 0;
+    padding-bottom: 36px;
     }
   }
