--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -7,6 +7,7 @@
   text-rendering: optimizeLegibility;
   font-family: 'Inter', sans-serif;
   color: #FFFFFF;
+  min-height: 100vh;
 }
 
 @supports (font-variation-settings: normal) {
